# HyFI

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  BAYESIAN_OPTIMIZATION_IMPLEMENTATION.md  CITATION.cff  GETTING_STARTED.txt  OPTUNA_IMPLEMENTATION.md  PARETO_IMPLEMENTATION.md  README.md  hyfi.yaml  pyproject.toml
ParaView/: HyFI_3Dmodel_template.pvsm
config/: config_example_StLeonard.json  config_multi_Bohemia.json  config_multi_SECOS25.json  config_multi_TEMPLATE.json  config_single_TEMPLATE.json
data/examples/Bedretto/: convert_BULGG5100_to_HyFI.py
data/examples/Bohemia/: FocMecwithmatchingIDs_Bohemia_2008-2018.csv  FocMecwithmatchingIDs_Bohemia_2008-2018_Mlall.csv  FocMecwithmatchingIDs_Bohemia_2008-2018_Mlall_onlymatched.csv  HypocenterwithmatchingIDs_Bohemia_1991-2021.csv  HypocenterwithmatchingIDs_Bohemia_1991-2021_MLall.csv
data/examples/Diemtigen/: Diemtigen_relocatedEvents.csv
data/examples/SECOS_20260116/: ECOS_Merge_Bull+AbsRel+DDC+DDR_20260116.AssociateFM.csv  ECOS_Merge_Bull+AbsRel+DDC+DDR_20260116.AssociateFM_HyFI.csv  ECOS_Merge_Bull+AbsRel+DDC+DDR_20260116.ConsolidatedMergeCat_HyFI.csv
data/examples/StLeonard/: FM_StLeonard.csv  hypoDD_StLeonard.csv
data/examples/Stressfield/: CH_stressfield.dbf  CH_stressfield.qmd  CH_stressfield.shp  CH_stressfield.shx
data_examples/Anzere/: FocalMechanisms_Anzere.txt  hypoDD_Anzere.txt
data_examples/Bedretto/: bedretto_reference
data_examples/DEM_CH/: dhm25_grid_100.tif.aux.xml
docs/: .gitignore  INPUT_PARAMETER_DOCU.md  INSTALLATION.md  IsolationForest_less_restrictive_update.md  PARETO_QUICKSTART.md  STRESS_SHAPEFILE_USERGUIDE.md  advanced_objective_functions.md  bayesian_optimization.md  objective_function.tex  optimization_methods_comparison.md  outlier_detection_methods.md  parameter_optimization.md  parameter_optimization_guide.md  pareto_optimization.md  requirements.txt
docs/source/: conf.py  configuration.md  contributing.md  examples.md  index.md  input_parameters.md  installation.md  license.md  multi_examples.md  output.md  querying.md  quickstart.md  single_examples.md  workflows.md
docs/source/api/: modules.rst
docs/source/modules/: auto_classification.md  fault_network.md  index.md  model_validation.md  stress_analysis.md  visualization.md
example_projects/: SECOS_preprocess.py  config_A0.json  config_A18.json  config_A24.json  config_A37.json  config_TEMPLATE.json  config_multi_Bohemia.json  config_multi_SECOS25.json  config_multi_TEMPLATE.json  multi_sequence_example.json  segmentation_only_example.json
example_queries/: DUCKDB_QUICKSTART.md  hyfi_query.py  query_examples.py
examples_archive/: compare_outlier_methods.py  config_example.py  inputparams_sensitivity.py  runfile.py  runfile_Lenk.py  runfile_Reclere.py  runfile_clustering.py
misc/: standalone_catalog_parser.py
src/hyfi/: __init__.py  _version.py  cli.py
src/hyfi/config/: __init__.py  io.py  multi_sequence_config.py  multi_sequence_schema.py  multi_sequence_templates.py  parameters.py  schema.py  validation.py
(+78 files in other folders)
